openshift/overlays/production/route-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: portfolio
spec:
  host: portfolio-prod.apps.test.mtnn.cloud
